<resources>

    <string name="app_name">高校通</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="loading_more">加载更多</string>
    <string name="loading_full">已加载全部</string>
    
    <string name="new_data_toast_message">有 %d 条更新</string>
    <string name="new_data_toast_none">没有新更新</string>
    <string name="more_group">更多</string>
    
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="exit">确定要退出吗？</string>
    <string name="delete">删除</string>
    
    <string name="isautologin">下次自动登录：</string>
	<string name="autologin">是</string>
    <string name="noautologin">否</string>
    
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="manager">管理员</string>
    
    <string name="choose_identity">选择身份</string>
    <string name="choose_school">选择学校</string>
    <string name="login">登       录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="reset_pass">重置密码</string>
    <string name="account_str">请输入账号</string>
    <string name="password_str">请输入密码</string>   
    <string name="email_str">请输入邮箱</string>
    <string name="please_choose_school">请选择学校</string>
    <string name="edit_teachername">请输入授课教师姓名</string>
    <string name="edit_coursename">请输入课程名称</string>
    <string name="add_course_weeks">添加上课周数</string>
    <string name="click_to_add_coursetime">点击添加上课时间</string>
    <string name="please_add_classroom">请输入上课地点</string>
    <string name="add_more_course_time">添加更多上课时间</string>
    
    <string name="select_course_tiem">选择上课时间</string>
    <string name="select_course_week">选择上课周数</string>
    <string name="select_date_title">选择日期</string>
    
    <string name="weekday_one">星期一</string>
    <string name="weekday_two">星期二</string>
    <string name="weekday_three">星期三</string>
    <string name="weekday_four">星期四</string>
    <string name="weekday_five">星期五</string>
    <string name="weekday_six">星期六</string>
    <string name="weekday_seven">星期日</string>
    
    <string name="network_fail">当前网络不可用，请检查你的网络设置。</string>
    <string name="network_success">网络已连接</string>
    <string name="network_mobile">您的手机正在使用移动网络，将产生数据流量。</string>
    
    <string name="message_center">信息中心</string>
    <string name="inbox_str">收件箱</string>
    <string name="outbox_str">发件箱</string>
</resources>
