<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:gravity="center" 
    android:orientation="vertical" 
    android:background="@drawable/bg_shadow" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center"
  	xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout android:gravity="center_vertical"
         android:id="@+id/linearLayout1" 
         android:background="#11000000" 
         android:paddingLeft="10.0dip" 
         android:paddingTop="6.0dip" 
         android:paddingBottom="6.0dip"
          android:layout_width="300.0dip"
           android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" 
            android:textColor="@color/gray" 
            android:id="@+id/textView_title" 
            android:paddingLeft="5.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/select_date_title" />
   
    </LinearLayout>
    <ImageView 
        android:id="@+id/imageView1" 
        android:background="#ffcccccc" 
        android:layout_width="fill_parent" 
        android:layout_height="1.0px" />
    <LinearLayout 
        android:gravity="center" 
        android:layout_gravity="center_horizontal" 
        android:id="@+id/timePicker1" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="1.0dip" 
        android:layout_marginRight="1.0dip">
        <com.e1858.widget.wheel.WheelView
            android:id="@+id/yeardialog" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="1.0" />
        <com.e1858.widget.wheel.WheelView 
            android:id="@+id/monthdialog" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"  
            android:layout_weight="1.0" />
        <com.e1858.widget.wheel.WheelView 
            android:id="@+id/daydialog" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="1.0" />
        
    </LinearLayout>
    <LinearLayout 
        android:gravity="center" 
        android:id="@+id/linearLayout2" 
        android:padding="10.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/button_ok" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="5.0dip" 
            android:text="@string/btn_ok" 
            android:layout_weight="1.0" 
            style="@style/button_1_style" />
        <Button 
            android:id="@+id/button_cancel" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5.0dip" 
            android:text="@string/btn_cancel" 
            android:layout_weight="1.0" 
            style="@style/button_2_style" />
    </LinearLayout>
</LinearLayout>
