<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:gravity="center" 
    android:orientation="vertical" 
    android:background="@drawable/bg_shadow" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center"
  	xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout 
         android:gravity="center_vertical"
         android:id="@+id/linearLayout1" 
         android:background="#11000000" 
         android:paddingLeft="10.0dip" 
         android:paddingTop="6.0dip" 
         android:paddingBottom="6.0dip"
         android:layout_width="280.0dip"
         android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" 
            android:textColor="@color/gray" 
            android:id="@+id/textView_title" 
            android:paddingLeft="5.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/select_course_week" />
   
    </LinearLayout>
    <ImageView 
        android:id="@+id/imageView1" 
        android:background="#ffcccccc" 
        android:layout_width="fill_parent" 
        android:layout_height="1.0px" />
    <ImageView 
        android:id="@+id/imageView2" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:src="@drawable/selector_bg_yellow" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.0"
        >
        <Button 
            android:id="@+id/single_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fffe7f58"
            android:text="单周"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/double_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fffeaa58"
            android:text="双周"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/all_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fffe5858"
            android:text="全选"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            android:layout_weight="1.0"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:gravity="center" 
        android:layout_gravity="center_horizontal" 
        android:id="@+id/timePicker1" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="0.0" 
        android:layout_marginLeft="1.0dip" 
        android:layout_marginRight="1.0dip">
     <GridView
        android:id="@+id/week_gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="6"
        android:cacheColorHint="#00000000"
        android:scrollbars="none"/>      
    </LinearLayout>
     <LinearLayout 
        android:gravity="center" 
        android:id="@+id/linearLayout2" 
        android:padding="10.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/button_ok" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="5.0dip" 
            android:text="@string/btn_ok" 
            android:layout_weight="1.0" 
            style="@style/button_1_style" />
        <Button 
            android:id="@+id/button_cancel" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5.0dip" 
            android:text="@string/btn_cancel" 
            android:layout_weight="1.0" 
            style="@style/button_2_style" />
    </LinearLayout>

</LinearLayout>